--- a/style.css
+++ b/style.css
@@ -1,229 +1,298 @@
-*{
-    margin: 0;
+* {
+  margin: 0;
 }
-body{
-    font-family: "Roboto", sans-serif;
+body {
+  font-family: "Roboto", sans-serif;
 }
-.navbar{
-    width: 100%;
-    height: 50px;
-    background-color: black;
+.navbar {
+  width: 100%;
+  height: 50px;
+  background-color: black;
 }
-.navbar-container{
-    display: flex;
-    align-items: center;
-   
-    padding: 0 100px;
-    color: white;
-}
-.logo-container{
-    flex: 1;
-   
-}
-.logo{
-    font-family: "Sen", sans-serif;
-    font-size: 30px;
-    color: red;
-}
-.menu-container{
-    flex: 6;
-    
-}
-.menu-list{
-    display: flex;
-    list-style: none;
-}
-.menu-list-items{
-    margin-right: 30px;
-}
-.menu-list-items.active{
-    font-weight: bold;
-}
-.profile-container{
-    flex: 2;
-    display: flex;
-    align-content: center;
-    justify-content: flex-end;
-}
-.profile-text-container{
-    margin: 0 20px;
-}
-.profile-picture{
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    object-fit: cover;
+.navbar-container {
+  display: flex;
+  align-items: center;
 
+  padding: 0 100px;
+  color: white;
 }
-.toggle{
-    width: 40px;
-    height: 20px;
-    background-color: white;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    position: relative;
+.logo-container {
+  flex: 1;
 }
-.toggle-icon{
-    color: gold;
+.logo {
+  font-family: "Sen", sans-serif;
+  font-size: 30px;
+  color: red;
 }
-.toggle-ball{
-    width: 18px;
-    height: 18px;
-    background-color: black;
-    position: absolute;
-    right: 1px;
-    border-radius: 50%;
-    cursor: pointer;
+.menu-container {
+  flex: 6;
 }
-.sidebar{
-    width: 50px;
-    height: 100%;
-    background-color: black;
-    position: fixed;
-    top: 0%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 60px;
+.menu-list {
+  display: flex;
+  list-style: none;
 }
-.left-menu-icon{
-    color: white;
-    font-size: 20px;
-    margin-bottom: 40px;
+.menu-list-items {
+  margin-right: 30px;
 }
-.container{
-    background-color: #151515;
-    min-height: calc(100vh - 50px);
-    color: white;
+.menu-list-items.active {
+  font-weight: bold;
 }
-.content-container{
-    margin-left: 50px;
+.profile-container {
+  flex: 2;
+  display: flex;
+  align-content: center;
+  justify-content: flex-end;
 }
-.featured-content{
-    height: 50vh;
-    padding: 50px;
-   
+.profile-text-container {
+  margin: 0 20px;
 }
-.featured-title{
-    width: 400px;
+.profile-picture {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
 }
-.featured-desc{
-    width: 500px;
-    color: lightgray;
-    margin: 30px 0;
+.toggle {
+  width: 40px;
+  height: 20px;
+  background-color: white;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
 }
-.featured-button{
-    background-color: red;
-    color: white;
-    padding: 10px 20px;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    font-weight: bold;
+.toggle-icon {
+  color: gold;
 }
-.movie-list-container{
-    
-    padding:0 20px;
+.toggle-ball {
+  width: 18px;
+  height: 18px;
+  background-color: black;
+  position: absolute;
+  right: 1px;
+  border-radius: 50%;
+  cursor: pointer;
 }
-.movie-list-wrapper{
-    position: relative;
-    
+.sidebar {
+  width: 50px;
+  height: 100%;
+  background-color: black;
+  position: fixed;
+  top: 0%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 60px;
 }
-.movie-list{
-    display: flex;
-    align-items: center;
-    height: 300px;
+.left-menu-icon {
+  color: white;
+  font-size: 20px;
+  margin-bottom: 40px;
 }
-.movie-list-item{
-    margin-right: 30px;
-    position: relative;
-    
+.container {
+  background-color: #151515;
+  min-height: calc(100vh - 50px);
+  color: white;
 }
-.movie-list-item:hover .movie-list-item-img{
-    transform: scale(1.2);
-    margin: 0 30px;
-    opacity: 0.5;
-
+.content-container {
+  margin-left: 50px;
+}
+.featured-content {
+  height: 50vh;
+  padding: 50px;
+}
+.featured-title {
+  width: 400px;
+}
+.featured-desc {
+  width: 500px;
+  color: lightgray;
+  margin: 30px 0;
+}
+.featured-button {
+  background-color: red;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  font-weight: bold;
+}
+.movie-list-container {
+  padding: 0 20px;
+}
+.movie-list-wrapper {
+  position: relative;
+}
+.movie-list {
+  display: flex;
+  align-items: center;
+  height: 300px;
+}
+.movie-list-item {
+  margin-right: 30px;
+  position: relative;
+}
+.movie-list-item:hover .movie-list-item-img {
+  transform: scale(1.2);
+  margin: 0 30px;
+  opacity: 0.5;
 }
 
 .movie-list-item:hover .movie-list-item-button,
 .movie-list-item:hover .movie-list-item-desc,
-.movie-list-item:hover .movie-list-item-title
-{
-    opacity: 1;
-   
+.movie-list-item:hover .movie-list-item-title {
+  opacity: 1;
 }
-.movie-list-item-img{
-    width: 270px;
-    height: 200px;
-    object-fit: cover;
-    transition: all 1s ease-in-out;
+.movie-list-item-img {
+  width: 270px;
+  height: 200px;
+  object-fit: cover;
+  transition: all 1s ease-in-out;
 }
-.movie-list-item-title{
-    background-color: #333;
-    padding: 0 10px;
-    font-size: 32px;
-    font-weight: bold;
-    position: absolute;
-    top: 10%;
-    left: 50px;
-    opacity: 0; 
-    transition:1s all ease-in-out;
+.movie-list-item-title {
+  background-color: #333;
+  padding: 0 10px;
+  font-size: 32px;
+  font-weight: bold;
+  position: absolute;
+  top: 10%;
+  left: 50px;
+  opacity: 0;
+  transition: 1s all ease-in-out;
 }
-.movie-list-item-desc{
-    background-color: #333;
-    padding: 10px;
-    font-size: 14px;
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    width: 250px;
-     opacity: 0; 
-     transition:1s all ease-in-out;
-
+.movie-list-item-desc {
+  background-color: #333;
+  padding: 10px;
+  font-size: 14px;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  width: 250px;
+  opacity: 0;
+  transition: 1s all ease-in-out;
 }
-.movie-list-item-button{
-    padding: 10px;
-    background-color: red;
-    color: white;
-    border-radius: 10px;
-    outline: none;
-    border: none;
-    font-weight: bold;
-    cursor:pointer;
-    position: absolute;
-    bottom: 20px;
-    left: 50px;
-    opacity: 0;
-    transition:1s all ease-in-out;
+.movie-list-item-button {
+  padding: 10px;
+  background-color: red;
+  color: white;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
+  position: absolute;
+  bottom: 20px;
+  left: 50px;
+  opacity: 0;
+  transition: 1s all ease-in-out;
 }
 
-.arrow{
-    font-size: 120px;
-    position: absolute;
-    top: 665px;
-    right: 0;
-    color: rgb(161, 161, 161);
-    opacity: 0.7;
-    cursor: pointer;
+.arrow {
+  font-size: 120px;
+  position: absolute;
+  top: 665px;
+  right: 0;
+  color: rgb(161, 161, 161);
+  opacity: 0.7;
+  cursor: pointer;
 }
-.arrow1{
-    font-size: 120px;
-    position: absolute;
-    top: 90px;
-    right: 0;
-    color: rgb(161, 161, 161);
-    opacity: 0.7;
-    cursor: pointer;
+.arrow1 {
+  font-size: 120px;
+  position: absolute;
+  top: 90px;
+  right: 0;
+  color: rgb(161, 161, 161);
+  opacity: 0.7;
+  cursor: pointer;
 }
-.arrow3{
-    font-size: 120px;
-    position: absolute;
-    top: 95px;
-    right: 0;
-    color: rgb(161, 161, 161);
-    opacity: 0.7;
-    cursor: pointer;
+.arrow3 {
+  font-size: 120px;
+  position: absolute;
+  top: 95px;
+  right: 0;
+  color: rgb(161, 161, 161);
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+/* Dark Mode */
+body.dark-theme {
+  background-color: #1f1f1f;
+  color: #eaeaea;
+}
+
+body.dark-theme .navbar {
+  background-color: #111;
+}
+
+body.dark-theme .menu-list-items a {
+  color: #eaeaea;
+}
+
+body.dark-theme .menu-list-items.active a {
+  color: #f39c12;
+}
+
+body.dark-theme .content-container {
+  background-color: #2d2d2d;
+}
+
+body.dark-theme h1,
+body.dark-theme h2 {
+  color: #f39c12;
+}
+
+/* Lightbulb icons */
+.toggle-icon {
+  display: none;
+}
+
+.toggle-icon.active {
+  display: block;
+}
+
+.toggle-ball {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: #fff;
+  position: relative;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+body.dark-theme .toggle-ball {
+  background-color: #333;
+}
+
+body.dark-theme .toggle-ball {
+  transform: translateX(20px);
+}
+
+.toggle-icon.fa-lightbulb {
+  color: #f39c12;
+}
+
+body.dark-theme .toggle-icon.fa-regular.fa-lightbulb {
+  color: #555;
+}
+
+body.dark-theme .toggle-ball {
+  transform: translateX(20px);
+}
+
+/* Mobile Responsiveness */
+@media (max-width: 768px) {
+  .navbar-container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .menu-container ul {
+    flex-direction: column;
+    margin-top: 10px;
+  }
 }
